--- a/templates/_base.html
+++ b/templates/_base.html
@@ -10,7 +10,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light mx-3 ">
   <div class="container-fluid border-dark">
     <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-    <a class="navbar-brand" href="#">About</a>
+    <a class="navbar-brand" href="{% url 'about' %}">About</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon">haha</span>
     </button>
@@ -27,17 +27,17 @@
           <a class="nav-link active" aria-current="page" href="#">Password change</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Logout</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
           </li>
           {% else %}
           <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Password reset</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Login</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'account_login' %}">Login</a>
           </li>
           <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Sign Up</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'account_signup' %}">Sign Up</a>
           </li>
           {% endif %}
       </ul>
