--- a/templates/books/book_list.html
+++ b/templates/books/book_list.html
@@ -5,4 +5,10 @@
 {% for book in books %}
 <h2><a href="{{book.get_absolute_url}}">{{book.title}}</a></h2>
 {% endfor %}
+
+<form>
+<input name='search'>
+<button type="submit" class="btn btn-info my-3">search</button>
+</form>
+
 {% endblock content %}
