--- a/templates/books/book_detail.html
+++ b/templates/books/book_detail.html
@@ -5,4 +5,6 @@
 <h2>{{book.title}}</h2>
 <h2>{{book.author}}</h2>
 <h2>{{book.price}}</h2>
+
+{% for review in reviews %}{{review.review}}{% endfor %}
 {% endblock content %}
